# tictactoe-gui

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
src/: constants.rs  drawing.rs  game.rs  main.rs  minimax.rs
targeted comp configs in dot cargo/: instrucciones.txt
